# cmaketest

./: README.md
t1/: CMakeLists.txt
t1/main/: CMakeLists.txt  main.c
t1/src/: CMakeLists.txt
t2/: CMakeLists.txt
t2/libsrc/: CMakeLists.txt
t2/libsrc/hello/: CMakeLists.txt
t2/libsrc/world/: CMakeLists.txt
t2/libsrc/world/src/: CMakeLists.txt
t2/src/: helloworld.c
t3/: CMakeLists.txt  main.c
t4/: CMakeLists.txt
