cmake_minimum_required(VERSION 2.8)
project(libs)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
include_directories(${PROJECT_BINARY_DIR}/inc)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)


file(GLOB fileFold "*")
foreach(fileFoldName ${fileFold})
    get_filename_component(VarName ${fileFoldName} NAME)
    if(${VarName} MATCHES build)
        continue()
    endif()
    if(${VarName} MATCHES CMakeLists.txt)
        continue()
    endif()
    string(CONCAT inc ${fileFoldName} "/inc/*.h")
    file(GLOB INC ${inc})
    file(COPY ${INC} DESTINATION ${CMAKE_BINARY_DIR}/inc)
    string(CONCAT src ${fileFoldName} "/src/*.c")
    file(GLOB SRC ${src})
    message(STATUS ${SRC})
    add_library(${VarName} STATIC ${SRC})
endforeach(fileFoldName ${fileFold})

